--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -617,7 +617,8 @@ fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
     # Line below is for non-PPP GDP per capita
     # rename(gdp_percap = ny_gdp_pcap_cd) %>%
     filter(!is.na(country_standard)) %>%
-    select(country_standard, year, gdp_percap, gdp_percap_ppp)  
+    select(country_standard, year, gdp_percap, gdp_percap_ppp) %>%
+    filter(year<=2019) #No 2020 data at time of accessing data
   
 ```
 
@@ -720,12 +721,13 @@ df_controls <- df_all_yr %>%
       percap_domestic_health_expenditure, percap_domestic_health_expenditure_ppp,
       gdp_percap, gdp_percap_ppp)) %>%
   filter(year==2020) %>%
+  rename(gdp_percap_ppp_covid = gdp_percap_ppp) %>%
   select(
     country_standard, 
     gdp,
     gini,
     gdp_percap,
-    gdp_percap_ppp,
+    gdp_percap_ppp_covid,
     percap_domestic_health_expenditure,
     percap_domestic_health_expenditure_ppp)
   
@@ -735,7 +737,7 @@ df_controls <- df_all_yr_2020 %>%
   full_join(df_controls, by = "country_standard") %>% 
   mutate(across(median_age:aged_65_older, ~ case_when(!is.nan(.x) ~ .x))) %>%
   select(
-    country_standard, gdp, gini, gdp_percap, gdp_percap_ppp,
+    country_standard, gdp, gini, gdp_percap, gdp_percap_ppp_covid,
     percap_domestic_health_expenditure, percap_domestic_health_expenditure_ppp,
     median_age, aged_65_older) %>% 
   # Removing rows with all NA values
@@ -1125,6 +1127,7 @@ df_indices_controls <- df_transparency_index %>%
   full_join(df_pandem_dem_violation_index[ , c("country_standard", "pandemic_dem_violation_index", "incomplete_dem_vio_index")], by = "country_standard") %>%
   full_join(df_covid_index[ , c("country_standard", "covid_index", 'incomplete_covid_index')], by = "country_standard") %>%
   full_join(df_controls, by = "country_standard") %>%
+  full_join(df_gdp_percap[ , c("country_standard", "year", "gdp_percap_ppp")], by = c("country_standard", "year")) %>%
   filter(!is.na(country_standard)) %>%
   filter(!is.na(year)) %>%
   arrange(country_standard, year)
